--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,46 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+.resource-form{
+  margin-top: 100px;
+}
+
+.active-resource{
+  background-color: #3140aa;
+  padding: 50px;
+  text-align: center;
+  color: white;
+  height: 300px;
+}
+
+.active-resource .resource-name{
+  font-size: 30px;
+  height: 50px;
+}
+
+.active-resource .elapsed-time{
+  font-size: 64px;
+  font-weight: bold;
+}
+
+
+.active-resource .time-wrapper{
+  height: 100px;
+}
+
+.tag.resource-inactive{
+  background-color: black !important;
+  border: dashed gray 4px;
+}
+.tag.resource-active{
+  background-color: orange !important;
+  border: dashed yellow 4px;
+}
+.tag.resource-completed{
+  background-color: lightgreen !important;
+  border: dashed green 4px;
+  color: green !important;
+}
+
